Add styling for the search bar section

--- a/homepage.html
+++ b/homepage.html
@@ -1,5 +1,7 @@
 <html>
     <link href='homepage.css' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <body>
         <nav id='nav-bar'><!--Nav, buttons, icons-->
             <ul>
@@ -14,12 +16,14 @@
             Search Bar
             Search Button Feeling Lucky button
             Language selection-->
-            <img src='https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png'/>
         <div id='main-content'>
+            <img src='https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png'/>
             <div id='search-bar'>
-                <div>Search Icon</div>
-                <div>Input</div>
-                <div>Microphone Icon</div>
+                <div><i class="material-icons">search</i>
+                </div>
+                <div><input type='text'></div>
+                <div><i class="material-icons">micro</i>
+                </div>
             </div>
             <div id='search-buttons'>
                 <button>Google Search</button>
@@ -31,9 +35,14 @@
         </div>
         </section>
         <footer>
-
             <!--Region
             Settings... -->
+            <div>
+                <p>Malaysia</p>
+            </div>
+            <div>
+
+            </div>
         </footer>
     </body>
 </html>
