fix styling for search bar

--- a/homepage.html
+++ b/homepage.html
@@ -21,7 +21,7 @@
             <div id='search-bar'>
                 <div><i class="material-icons">search</i>
                 </div>
-                <div><input type='text'></div>
+                <div><input type='search'></div>
                 <div><i class="material-icons">micro</i>
                 </div>
             </div>
