Add styling for search and lucky button

--- a/homepage.html
+++ b/homepage.html
@@ -26,8 +26,8 @@
                 </div>
             </div>
             <div id='search-buttons'>
-                <button>Google Search</button>
-                <button>I'm Feeling Lucky</button>
+                <input type='submit' value='Google Search'>
+                <input type='submit' value="I'm Feeling Lucky">
             </div>
         </div>
         <div id='language'>
