Adjust styling for logo image

--- a/homepage.html
+++ b/homepage.html
@@ -16,8 +16,10 @@
             Search Bar
             Search Button Feeling Lucky button
             Language selection-->
-        <div id='main-content'>
+        <div id='logo-image'>
             <img src='https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png'/>
+        </div>
+        <div id='main-content'>
             <div id='search-bar'>
                 <div><i class="material-icons">search</i>
                 </div>
