--- a/homepage.html
+++ b/homepage.html
@@ -31,10 +31,11 @@
                 <input type='submit' value='Google Search'>
                 <input type='submit' value="I'm Feeling Lucky">
             </div>
+            <div id='language'>
+                <p>Google offered in: <a href="">中文(简体)</a><a href="">Melayu</a></p>
+            </div>
         </div>
-        <div id='language'>
-            <p>Google offered in: <a>中文（简体）</a><a>Melayu</a></p>
-        </div>
+
         </section>
         <footer>
             <!--Region
