--- a/homepage.html
+++ b/homepage.html
@@ -5,10 +5,10 @@
     <body>
         <nav id='nav-bar'><!--Nav, buttons, icons-->
             <ul>
-                <li><a>Gmail</a></li>
-                <li><a>Images</a></li>
-                <li><a>Apps Icon</a></li>
-                <li><a><img /></a></li>
+                <li><a href=''>Gmail</a></li>
+                <li><a href=''>Images</a></li>
+                <li><a href=''><i class="material-icons">apps</i></a></li>
+                <li><a href=''><i class="material-icons">face</i></a></li>
             </ul>
         </nav>
         <section>
