Add information on the footer section

--- a/homepage.html
+++ b/homepage.html
@@ -37,14 +37,24 @@
         </div>
 
         </section>
-        <footer>
+        <footer id='footer'>
             <!--Region
             Settings... -->
-            <div>
+            <div id='region'>
                 <p>Malaysia</p>
             </div>
-            <div>
-
+            <div id='settings'>
+                <ul>
+                    <li><a>Advertising</a></li>
+                    <li><a>Business</a></li>
+                    <li><a>About</a></li>
+                    <li><a>How Search works</a></li>
+                </ul>
+                <ul>
+                    <li><a>Privacy</a></li>
+                    <li><a>Terms</a></li>
+                    <li><a>Settings</a></li>
+                </ul>
             </div>
         </footer>
     </body>
