Add href for the footer links

--- a/homepage.html
+++ b/homepage.html
@@ -45,15 +45,15 @@
             </div>
             <div id='settings'>
                 <ul>
-                    <li><a>Advertising</a></li>
-                    <li><a>Business</a></li>
-                    <li><a>About</a></li>
-                    <li><a>How Search works</a></li>
+                    <li><a href=''>Advertising</a></li>
+                    <li><a href=''>Business</a></li>
+                    <li><a href=''>About</a></li>
+                    <li><a href=''>How Search works</a></li>
                 </ul>
                 <ul>
-                    <li><a>Privacy</a></li>
-                    <li><a>Terms</a></li>
-                    <li><a>Settings</a></li>
+                    <li><a href=''>Privacy</a></li>
+                    <li><a href=''>Terms</a></li>
+                    <li><a href=''>Settings</a></li>
                 </ul>
             </div>
         </footer>
