--- a/searchpage.html
+++ b/searchpage.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet">
     <body>
         <!--Navigation Bar-->
         <!--First row contains: Google Logo, Search Bar, 
@@ -7,7 +9,24 @@
         <!--Second row contains: Selection(All, Maps, News, Videos, Images, More)
             Settings, Tools
         -->
+        <nav>
+            <div>
+                <img src='https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_92x30dp.png'/>
+                <div id='search-bar'>
+                    </div>
+                    <div><input type='search'></div>
+                    <div><i class="material-icons">micro</i></div>
+                    <div><i class="material-icons">search</i>
+                </div>
+                <ul>
+                    <li><a><i class="material-icons">apps</i></a></li>
+                    <li><a><i class="material-icons">face</i></a></li>
+                </ul>
+            </div>
+            <div>
 
+            </div>
+        </nav>
         <!--Main Content-->
         <!--Number of search results(time taken)-->
 
