Add elements for second row of navigation bar

--- a/searchpage.html
+++ b/searchpage.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
     <body>
         <!--Navigation Bar-->
         <!--First row contains: Google Logo, Search Bar, 
@@ -24,7 +23,18 @@
                 </ul>
             </div>
             <div>
-
+                <ul>
+                    <li><a><i class="material-icons">search</i>All</a></li>
+                    <li><a><i class="material-icons">place</i>Maps</a></li>
+                    <li><a><i class="material-icons">article</i>News</a></li>
+                    <li><a><i class="material-icons">slideshow</i>Videos</a></li>
+                    <li><a><i class="material-icons-outlined">image</i>Images</a></li>
+                    <li><a><i class="material-icons">more_vert</i>More</a></li>
+                </ul>
+                <ul>
+                    <li><a>Settings</a></li>
+                    <li><a>Tools</a></li>
+                </ul>
             </div>
         </nav>
         <!--Main Content-->
