--- a/searchpage.html
+++ b/searchpage.html
@@ -9,33 +9,38 @@
         <!--Second row contains: Selection(All, Maps, News, Videos, Images, More)
             Settings, Tools
         -->
-        <nav id='nav-bar'>
-            <div id='first-row'>
-                <img id='logo-image' src='https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_92x30dp.png'/>
-                <div id='search-bar'>
+        <nav class='nav-bar'>
+            <div class='first-row'>
+                <img class='logo-image' src='https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_92x30dp.png'/>
+                <div class='search-bar'>
                     <div><input type='search'></div>
                     <div><i class="material-icons">micro</i></div>
-                    <div><i class="material-icons">search</i>
+                    <div><i class="material-icons">search</i></div>
                 </div>
-                <ul id='apps-account'>
-                    <li><a><i class="material-icons">apps</i></a></li>
-                    <li><a><i class="material-icons">face</i></a></li>
-                </ul>
+                <div>
+                    <ul class='apps-account'>
+                        <li><a><i class="material-icons">apps</i></a></li>
+                        <li><a><i class="material-icons">face</i></a></li>
+                    </ul>
                 </div>
             </div>
-                <div id='second-row'>
-                <ul id='search-type'>
-                    <li><a><i class="material-icons">search</i>All</a></li>
-                    <li><a><i class="material-icons">place</i>Maps</a></li>
-                    <li><a><i class="material-icons">article</i>News</a></li>
-                    <li><a><i class="material-icons">slideshow</i>Videos</a></li>
-                    <li><a><i class="material-icons-outlined">image</i>Images</a></li>
-                    <li><a><i class="material-icons">more_vert</i>More</a></li>
-                </ul>
-                <ul>
-                    <li><a>Settings</a></li>
-                    <li><a>Tools</a></li>
-                </ul>
+            <div class='second-row'>
+                <div>
+                    <ul class='search-type'>
+                        <li><a><i class="material-icons">search</i>All</a></li>
+                        <li><a><i class="material-icons">place</i>Maps</a></li>
+                        <li><a><i class="material-icons">article</i>News</a></li>
+                        <li><a><i class="material-icons">slideshow</i>Videos</a></li>
+                        <li><a><i class="material-icons-outlined">image</i>Images</a></li>
+                        <li><a><i class="material-icons">more_vert</i>More</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li><a>Settings</a></li>
+                        <li><a>Tools</a></li>
+                    </ul>
+                </div>
             </div>
         </nav>
         <!--Main Content-->
