--- a/searchpage.html
+++ b/searchpage.html
@@ -17,7 +17,7 @@
                     <div><i class="material-icons">micro</i></div>
                     <div><i class="material-icons">search</i></div>
                 </div>
-                <div>
+                <div class='search-bar-end'>
                     <ul class='apps-account'>
                         <li><a><i class="material-icons">apps</i></a></li>
                         <li><a><i class="material-icons">face</i></a></li>
