Complete the styling for the Search bar

--- a/searchpage.html
+++ b/searchpage.html
@@ -14,8 +14,11 @@
                 <img class='logo-image' src='https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_92x30dp.png'/>
                 <div class='search-bar'>
                     <div><input type='search'></div>
-                    <div><i class="material-icons">micro</i></div>
-                    <div><i class="material-icons">search</i></div>
+                    <span class="Bar"></span>
+                    <ul>
+                        <li><div><i class="material-icons">mic</i></div></li>
+                        <li><div><i class="material-icons">search</i></div></li>
+                    </ul>
                 </div>
                 <div class='search-bar-end'>
                     <ul class='apps-account'>
@@ -36,7 +39,7 @@
                     </ul>
                 </div>
                 <div>
-                    <ul>
+                    <ul class='settings-tools'>
                         <li><a>Settings</a></li>
                         <li><a>Tools</a></li>
                     </ul>
