Complete styling for first section of the second row of the navigation bar

--- a/searchpage.html
+++ b/searchpage.html
@@ -17,7 +17,7 @@
                     <span class="Bar"></span>
                     <ul>
                         <li><div><i class="material-icons">mic</i></div></li>
-                        <li><div><i class="material-icons">search</i></div></li>
+                        <li class='search'><div><i class="material-icons">search</i></div></li>
                     </ul>
                 </div>
                 <div class='search-bar-end'>
@@ -28,17 +28,17 @@
                 </div>
             </div>
             <div class='second-row'>
-                <div>
+                <div class='search-type'>
                     <ul class='search-type'>
-                        <li><a><i class="material-icons">search</i>All</a></li>
-                        <li><a><i class="material-icons">place</i>Maps</a></li>
-                        <li><a><i class="material-icons">article</i>News</a></li>
-                        <li><a><i class="material-icons">slideshow</i>Videos</a></li>
-                        <li><a><i class="material-icons-outlined">image</i>Images</a></li>
-                        <li><a><i class="material-icons">more_vert</i>More</a></li>
+                        <li><a><i class="material-icons">search</i><span>All</span></a></li>
+                        <li><a><i class="material-icons">place</i><span>Maps</span></a></li>
+                        <li><a><i class="material-icons">article</i><span>News</span></a></li>
+                        <li><a><i class="material-icons">slideshow</i><span>Videos</span></a></li>
+                        <li><a><i class="material-icons">image</i><span>Images</span></a></li>
+                        <li><a><i class="material-icons">more_vert</i><span>More</span></a></li>
                     </ul>
                 </div>
-                <div>
+                <div class="settings-tools">
                     <ul class='settings-tools'>
                         <li><a>Settings</a></li>
                         <li><a>Tools</a></li>
