Add tags for search results secton

--- a/searchpage.html
+++ b/searchpage.html
@@ -48,7 +48,65 @@
         </nav>
         <!--Main Content-->
         <!--Number of search results(time taken)-->
-
+        <section class="results-section">
+            <div class="results-number">
+                <p>About 128,000,000 results (0.75 seconds)</p>
+            </div>
+            <div class="results-card" id='first'>
+                <p>sample-github.io <span>> google-search-results</span><i class="material-icons">arrow_drop_down</i></p>
+                <a href=''>build this page - GitHub Pages</a>
+                <p>build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...
+                </p>
+            </div>
+            <div class="results-card" id='second'>
+                <p>sample-github.io <span>> google-search-results</span><i class="material-icons">arrow_drop_down</i></p>
+                <a href=''>build this page - GitHub Pages</a>
+                <p>build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...
+                </p>
+            </div>
+            <div class="results-card" id='third'>
+                <p>sample-github.io <span>> google-search-results</span><i class="material-icons">arrow_drop_down</i></p>
+                <a href=''>build this page - GitHub Pages</a>
+                <p>build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...
+                </p>
+            </div>
+            <div class="results-card" id='fourth'>
+                <p>sample-github.io <span>> google-search-results</span><i class="material-icons">arrow_drop_down</i></p>
+                <a href=''>build this page - GitHub Pages</a>
+                <p>build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...
+                </p>
+            </div>
+            <div class="results-card" id='fifth'>
+                <p>sample-github.io <span>> google-search-results</span><i class="material-icons">arrow_drop_down</i></p>
+                <a href=''>build this page - GitHub Pages</a>
+                <p>build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...
+                </p>
+            </div>
+            <div class="results-card" id='sixth'>
+                <p>sample-github.io <span>> google-search-results</span><i class="material-icons">arrow_drop_down</i></p>
+                <a href=''>build this page - GitHub Pages</a>
+                <p>build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...
+                </p>
+            </div>
+            <div class="results-card" id='seventh'>
+                <p>sample-github.io <span>> google-search-results</span><i class="material-icons">arrow_drop_down</i></p>
+                <a href=''>build this page - GitHub Pages</a>
+                <p>build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...
+                </p>
+            </div>
+            <div class="results-card" id='eighth'>
+                <p>sample-github.io <span>> google-search-results</span><i class="material-icons">arrow_drop_down</i></p>
+                <a href=''>build this page - GitHub Pages</a>
+                <p>build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...
+                </p>
+            </div>
+            <div class="results-card" id='nineth'>
+                <p>sample-github.io <span>> google-search-results</span><i class="material-icons">arrow_drop_down</i></p>
+                <a href=''>build this page - GitHub Pages</a>
+                <p>build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...
+                </p>
+            </div>
+        </section>
         <!--Search Results-->
         <!--URL>SECTION PAGE>PAGE-->
         <!--Title of the page-->
