--- a/searchpage.html
+++ b/searchpage.html
@@ -64,6 +64,15 @@
                 <p>build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...
                 </p>
             </div>
+            <div class="people-also-ask">
+                <h1>People also ask</h1>
+                <div class="also-ask-table">
+                    <div>Question 1<i class="material-icons">expand_more</i></div>
+                    <div>Question 2<i class="material-icons">expand_more</i></div>
+                    <div>Question 3<i class="material-icons">expand_more</i></div>
+                    <div>Question 4<i class="material-icons">expand_more</i></div>
+                </div>
+            </div>
             <div class="results-card" id='third'>
                 <p>sample-github.io <span>> google-search-results</span><i class="material-icons">arrow_drop_down</i></p>
                 <a href=''>build this page - GitHub Pages</a>
