Complete the styling and elements for People also ask table

--- a/searchpage.html
+++ b/searchpage.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link href="searchpage.css" rel="stylesheet">
     <body>
         <!--Navigation Bar-->
@@ -67,10 +69,12 @@
             <div class="people-also-ask">
                 <h1>People also ask</h1>
                 <div class="also-ask-table">
-                    <div>Question 1<i class="material-icons">expand_more</i></div>
-                    <div>Question 2<i class="material-icons">expand_more</i></div>
-                    <div>Question 3<i class="material-icons">expand_more</i></div>
-                    <div>Question 4<i class="material-icons">expand_more</i></div>
+                    <div class="question">Question 1<i class="material-icons">expand_more</i></div>
+                    <div class="question">Question 2<i class="material-icons">expand_more</i></div>
+                    <div class="question">Question 3<i class="material-icons">expand_more</i></div>
+                    <div class="question">Question 4<i class="material-icons">expand_more</i></div>
+                    <div class="question">Question 5<i class="material-icons">expand_more</i></div>
+                    <div class="question" id='last'>Question 6<i class="material-icons">expand_more</i></div>
                 </div>
             </div>
             <div class="results-card" id='third'>
