Add People also search section and Searches related section

--- a/searchpage.html
+++ b/searchpage.html
@@ -54,6 +54,10 @@
             <div class="results-number">
                 <p>About 128,000,000 results (0.75 seconds)</p>
             </div>
+        <!--Search Results-->
+        <!--URL>SECTION PAGE>PAGE-->
+        <!--Title of the page-->
+        <!--Description of the page-->
             <div class="results-card" id='first'>
                 <p>sample-github.io <span>> google-search-results</span><i class="material-icons">arrow_drop_down</i></p>
                 <a href=''>build this page - GitHub Pages</a>
@@ -66,6 +70,8 @@
                 <p>build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...
                 </p>
             </div>
+        <!--People also ask-->
+        <!--Unordered list of list-->
             <div class="people-also-ask">
                 <h1>People also ask</h1>
                 <div class="also-ask-table">
@@ -119,14 +125,32 @@
                 <p>build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...
                 </p>
             </div>
+            <div class="people-also-search">
+                <h1>People also search for</h1>
+                <div class="also-search-table">
+                    <div class="also-search"><i class="material-icons" id="related">tag_faces</i>People also search for 1<i class="material-icons">expand_more</i></div>
+                    <div class="also-search" id='last'><i class="material-icons" id="related">child_care</i>People also search for 2<i class="material-icons">expand_more</i></div>
+                </div>
+            </div>
+            <div class="related-section-container">
+                <h3>Searches related to build this webpage</h3>
+                <div class="related-section">
+                    <ul class='related-list'>
+                        <li><a>github</a></li>
+                        <li><a>how to build a website for free</a></li>
+                        <li><a>how to build a website from scratch</a></li>
+                        <li><a>create professional website</a></li>
+                    </ul>
+                    <ul class='related-list'>
+                        <li><a>build a website in a day</a></li>
+                        <li><a>creating a website for your business</a></li>
+                        <li><a>website builder</a></li>
+                        <li><a>free website builder</a></li>
+                    </ul>
+                </div>
+            </div>
         </section>
-        <!--Search Results-->
-        <!--URL>SECTION PAGE>PAGE-->
-        <!--Title of the page-->
-        <!--Description of the page-->
 
-        <!--People also ask-->
-        <!--Unordered list of list-->
 
         <!--Searches related to XXX-->
         <!--Two columns of list-->
