Fixed styling for cards in results section

--- a/searchpage.html
+++ b/searchpage.html
@@ -59,15 +59,15 @@
         <!--Title of the page-->
         <!--Description of the page-->
             <div class="results-card" id='first'>
-                <p>sample-github.io <span>> google-search-results</span><i class="material-icons">arrow_drop_down</i></p>
+                <p id='url'>sample-github.io <span>> google-search-results</span><i class="material-icons">arrow_drop_down</i></p>
                 <a href=''>build this page - GitHub Pages</a>
-                <p>build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...
+                <p id='desc'>build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...
                 </p>
             </div>
             <div class="results-card" id='second'>
-                <p>sample-github.io <span>> google-search-results</span><i class="material-icons">arrow_drop_down</i></p>
+                <p id='url'>sample-github.io <span>> google-search-results</span><i class="material-icons">arrow_drop_down</i></p>
                 <a href=''>build this page - GitHub Pages</a>
-                <p>build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...
+                <p id='desc'>build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...
                 </p>
             </div>
         <!--People also ask-->
@@ -84,47 +84,49 @@
                 </div>
             </div>
             <div class="results-card" id='third'>
-                <p>sample-github.io <span>> google-search-results</span><i class="material-icons">arrow_drop_down</i></p>
+                <p id='url'>sample-github.io <span>> google-search-results</span><i class="material-icons">arrow_drop_down</i></p>
                 <a href=''>build this page - GitHub Pages</a>
-                <p>build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...
+                <p id='desc'>build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...
                 </p>
             </div>
             <div class="results-card" id='fourth'>
-                <p>sample-github.io <span>> google-search-results</span><i class="material-icons">arrow_drop_down</i></p>
+                <p id='url'>sample-github.io <span>> google-search-results</span><i class="material-icons">arrow_drop_down</i></p>
                 <a href=''>build this page - GitHub Pages</a>
-                <p>build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...
+                <p id='desc'>build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...
                 </p>
             </div>
             <div class="results-card" id='fifth'>
-                <p>sample-github.io <span>> google-search-results</span><i class="material-icons">arrow_drop_down</i></p>
+                <p id='url'>sample-github.io <span>> google-search-results</span><i class="material-icons">arrow_drop_down</i></p>
                 <a href=''>build this page - GitHub Pages</a>
-                <p>build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...
+                <p id='desc'>build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...
                 </p>
             </div>
             <div class="results-card" id='sixth'>
-                <p>sample-github.io <span>> google-search-results</span><i class="material-icons">arrow_drop_down</i></p>
+                <p id='url'>sample-github.io <span>> google-search-results</span><i class="material-icons">arrow_drop_down</i></p>
                 <a href=''>build this page - GitHub Pages</a>
-                <p>build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...
+                <p id='desc'>build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...
                 </p>
             </div>
             <div class="results-card" id='seventh'>
-                <p>sample-github.io <span>> google-search-results</span><i class="material-icons">arrow_drop_down</i></p>
+                <p id='url'>sample-github.io <span>> google-search-results</span><i class="material-icons">arrow_drop_down</i></p>
                 <a href=''>build this page - GitHub Pages</a>
-                <p>build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...
+                <p id='desc'>build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...
                 </p>
             </div>
             <div class="results-card" id='eighth'>
-                <p>sample-github.io <span>> google-search-results</span><i class="material-icons">arrow_drop_down</i></p>
+                <p id='url'>sample-github.io <span>> google-search-results</span><i class="material-icons">arrow_drop_down</i></p>
                 <a href=''>build this page - GitHub Pages</a>
-                <p>build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...
+                <p id='desc'>build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...
                 </p>
             </div>
             <div class="results-card" id='nineth'>
-                <p>sample-github.io <span>> google-search-results</span><i class="material-icons">arrow_drop_down</i></p>
+                <p id='url'>sample-github.io <span>> google-search-results</span><i class="material-icons">arrow_drop_down</i></p>
                 <a href=''>build this page - GitHub Pages</a>
-                <p>build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...
+                <p id='desc'>build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...
                 </p>
             </div>
+        <!--People also search table-->
+        <!--Divisions of divisions-->
             <div class="people-also-search">
                 <h1>People also search for</h1>
                 <div class="also-search-table">
@@ -132,6 +134,8 @@
                     <div class="also-search" id='last'><i class="material-icons" id="related">child_care</i>People also search for 2<i class="material-icons">expand_more</i></div>
                 </div>
             </div>
+        <!--Searches related to XXX-->
+        <!--Two columns of list-->
             <div class="related-section-container">
                 <h3>Searches related to build this webpage</h3>
                 <div class="related-section">
@@ -149,6 +153,8 @@
                     </ul>
                 </div>
             </div>
+         <!--Goooooogle-->
+        <!--Search results page selection-->
             <table class="pager">
                 <tbody>
                     <tr>
@@ -168,16 +174,9 @@
                 </tbody>
             </table>
         </section>
-
-
-        <!--Searches related to XXX-->
-        <!--Two columns of list-->
-
-        <!--Goooooogle-->
-        <!--Search results page selection-->
-
         <!--Footer-->
         <!--First row: Region|Current location-->
         <!--Second row: Help, Send feedback, Privacy, Terms-->
+
     </body>
 </html>
