Add Footer section

--- a/searchpage.html
+++ b/searchpage.html
@@ -177,6 +177,23 @@
         <!--Footer-->
         <!--First row: Region|Current location-->
         <!--Second row: Help, Send feedback, Privacy, Terms-->
-
+        <footer>
+            <div class='location'>
+                <ul>
+                    <li>Malaysia</li>
+                    <li><span class='Bar2'></span></li>
+                    <li class='area'><i>DOT</i>11600,Jelutong,Penang</li>
+                    <li> - Based on your past activity - Use precise location - Learn more</li>
+                </ul>
+            </div>
+            <div class='terms'>
+                <ul>
+                    <li><a>Help</a></li>
+                    <li><a>Send feedback</a></li>
+                    <li><a>Privacy</a></li>
+                    <li><a>Terms</a></li>
+                </ul>
+            </div>
+        </footer>
     </body>
 </html>
