--- a/searchpage.html
+++ b/searchpage.html
@@ -25,7 +25,7 @@
                 <div class='search-bar-end'>
                     <ul class='apps-account'>
                         <li><a><i class="material-icons">apps</i></a></li>
-                        <li><a><i class="material-icons">face</i></a></li>
+                        <li><a href='https://github.com/Ganthology'><i class="material-icons">face</i></a></li>
                     </ul>
                 </div>
             </div>
@@ -140,16 +140,16 @@
                 <h3>Searches related to build this webpage</h3>
                 <div class="related-section">
                     <ul class='related-list'>
-                        <li><a>github</a></li>
-                        <li><a>how to build a website for free</a></li>
-                        <li><a>how to build a website from scratch</a></li>
-                        <li><a>create professional website</a></li>
+                        <li><a href=''>github</a></li>
+                        <li><a href=''>how to build a website for free</a></li>
+                        <li><a href=''>how to build a website from scratch</a></li>
+                        <li><a href=''>create professional website</a></li>
                     </ul>
                     <ul class='related-list'>
-                        <li><a>build a website in a day</a></li>
-                        <li><a>creating a website for your business</a></li>
-                        <li><a>website builder</a></li>
-                        <li><a>free website builder</a></li>
+                        <li><a href=''>build a website in a day</a></li>
+                        <li><a href=''>creating a website for your business</a></li>
+                        <li><a href=''>website builder</a></li>
+                        <li><a href=''>free website builder</a></li>
                     </ul>
                 </div>
             </div>
@@ -181,17 +181,16 @@
             <div class='location'>
                 <ul>
                     <li>Malaysia</li>
-                    <li><span class='Bar2'></span></li>
-                    <li class='area'><i>DOT</i>11600,Jelutong,Penang</li>
+                    <li class='area'><span class='dot'></span>11600,Jelutong,Penang</li>
                     <li> - Based on your past activity - Use precise location - Learn more</li>
                 </ul>
             </div>
             <div class='terms'>
                 <ul>
-                    <li><a>Help</a></li>
-                    <li><a>Send feedback</a></li>
-                    <li><a>Privacy</a></li>
-                    <li><a>Terms</a></li>
+                    <li><a href=''>Help</a></li>
+                    <li><a href=''>Send feedback</a></li>
+                    <li><a href=''>Privacy</a></li>
+                    <li><a href=''>Terms</a></li>
                 </ul>
             </div>
         </footer>
